Refact: Remove Unused Making Directory
- Fix Swagger Docs
